--- a/src/main/resources/userService.properties
+++ b/src/main/resources/userService.properties
@@ -1,1 +1,6 @@
 Connect.database=practicalMicroservice
+spring.datasource.url=jdbc:postgresql://localhost:5432/practicalMicroservice
+spring.datasource.username=roy
+spring.datasource.password=123456
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
